--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,7 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "jsxBracketSameLine": true
+  "jsxBracketSameLine": true,
+  "arrowParens": "always",
+  "bracketSpacing": true
 }
